# OOS1

./: .gitignore  CMakeLists.txt  README.md
ha1/: CMakeLists.txt
ha1/aufgabe1/: CMakeLists.txt
ha1/aufgabe1/src/: main.cc
ha1/aufgabe2/: CMakeLists.txt
ha1/aufgabe2/src/: main.c  main.cc
ha1/aufgabe3/: CMakeLists.txt
ha1/aufgabe3/src/: main.cc
ha1/aufgabe4/: CMakeLists.txt
ha1/aufgabe4/src/: buggy.c  buggy.cc
ha1/aufgabe5/: CMakeLists.txt
ha1/aufgabe5/src/: buggy.cc
ha2/aufgabe1/: CMakeLists.txt
ha2/aufgabe1/inc/: labyrinth.hh  position.hh  user_conio.h
ha2/aufgabe1/src/: labyrinth.cc  main.cc  position.cc
ha2/aufgabe2/: CMakeLists.txt
ha2/aufgabe2/src/: main.cc
ha3/aufgabe1/: CMakeLists.txt
ha3/aufgabe1/inc/: objectcounter.hh
ha3/aufgabe1/src/: main.cc  objectcounter.cc
ha3/aufgabe2/: CMakeLists.txt
ha3/aufgabe2/inc/: customer.hh
ha3/aufgabe2/src/: customer.cc  main.cc
ha3/aufgabe3/: CMakeLists.txt
ha3/aufgabe3/inc/: mystring2.hh
ha3/aufgabe3/src/: main.cc  mystring2.cc
ha3/aufgabe4/: CMakeLists.txt
ha3/aufgabe4/src/: main.cc
ha3/aufgabe5/: CMakeLists.txt
ha3/aufgabe5/inc/: vehicle.hh
ha3/aufgabe5/src/: main.cc  vehicle.cc
ha4/aufgabe1/: CMakeLists.txt
ha4/aufgabe1/inc/: appliance.hh  freezer.hh
ha4/aufgabe1/src/: appliance.cc  freezer.cc  main.cc
ha4/aufgabe2/: CMakeLists.txt
ha4/aufgabe2/inc/: parallelogram.hh  rectangle.hh
ha4/aufgabe2/src/: main.cc  paralellogram.cc  rectangle.cc
ha4/aufgabe3/: CMakeLists.txt
ha4/aufgabe3/inc/: powerdrill.hh  powerscrewdrill.hh  powerscrewdriver.hh  powertool.hh
ha4/aufgabe3/src/: main.cc  powerdrill.cc  powerscrewdrill.cc  powerscrewdriver.cc  powertool.cc
ha5/aufgabe1/: CMakeLists.txt
ha5/aufgabe1/src/: polymorphism.cc
ha5/aufgabe2/: CMakeLists.txt
ha5/aufgabe2/inc/: employee.hh  manager.hh  worker.hh
ha5/aufgabe2/src/: employee.cc  main.cc  manager.cc  worker.cc
ha5/aufgabe3/: CMakeLists.txt
ha5/aufgabe3/inc/: circle4.hh  dummydata.hh  dummyvectordata.hh  mydata.hh  myvector.hh  myvectordata.hh  point4.hh
ha5/aufgabe3/src/: circle4.cc  dummydata.cc  dummyvectordata.cc  main.cc  mydata.cc  myvector.cc  myvectordata.cc  point4.cc
lab1/aufgabe1/: CMakeLists.txt
lab1/aufgabe1/src/: main.cc
lab1/aufgabe2/: CMakeLists.txt
lab1/aufgabe2/src/: main.cc
lab1/aufgabe3/: CMakeLists.txt
lab1/aufgabe3/src/: main.cc  user_conio.h
lab1/aufgabe4/: CMakeLists.txt
lab1/aufgabe4/src/: main.cc
lab1/aufgabe5/: CMakeLists.txt
lab1/aufgabe5/src/: main.cc
lab2/aufgabe1/: CMakeLists.txt
lab2/aufgabe1/inc/: mystring.hh  pacman.hh  player.hh  position.hh
lab2/aufgabe1/src/: main.cc  mystring.cc  pacman.cc  player.cc  user_conio.cc
lab2/aufgabe2/: CMakeLists.txt
lab2/aufgabe2/inc/: fifo.hh
lab2/aufgabe2/src/: main.cc
lab2/aufgabe3/: CMakeLists.txt
lab2/aufgabe3/inc/: circle.hh  point.hh  polygon.hh
lab2/aufgabe3/src/: circle.cc  main.cc  point.cc  polygon.cc
lab3/aufgabe1/: CMakeLists.txt
lab3/aufgabe1/inc/: vehicle2.hh
lab3/aufgabe1/src/: main.cc  vehicle.cc  vehicle2.cc
lab3/aufgabe2/: CMakeLists.txt
lab3/aufgabe2/src/: main.cc
lab3/aufgabe3/: CMakeLists.txt
lab3/aufgabe3/inc/: circle2.hh  point2.hh  polygon2.hh
lab3/aufgabe3/src/: circle2.cc  main.cc  point2.cc  polygon2.cc
lab3/aufgabe4/: CMakeLists.txt
lab3/aufgabe4/inc/: circle3.hh  point3.hh  polygon3.hh
lab3/aufgabe4/src/: circle3.cc  main.cc  point3.cc  polygon3.cc
lab4/aufgabe1/: CMakeLists.txt
lab4/aufgabe1/inc/: book.hh  date.hh  dvd.hh  lecturer.hh  library.hh  medium.hh  person.hh  student.hh
lab4/aufgabe1/src/: book.cc  date.cc  dvd.cc  lecturer.cc  library.cc  main.cc  medium.cc  person.cc  student.cc
lab4/aufgabe2/: CMakeLists.txt
lab4/aufgabe2/src/: main.cc
lab4/aufgabe3/: CMakeLists.txt
lab4/aufgabe3/src/: main.cc
lab4/aufgabe4/: CMakeLists.txt
lab4/aufgabe4/inc/: circle4.hh  circle5.hh  drawingobject.hh  onedimobject.hh  point5.hh  polygon4.hh  polygon5.hh
lab4/aufgabe4/src/: circle4.cc  drawingobject.cc  main.cc  onedimobject.cc  point4.cc  point5.cc  polygon4.cc
lab5/aufgabe1/: CMakeLists.txt
lab5/aufgabe1/src/: main.cc
lab5/aufgabe2/: CMakeLists.txt
lab5/aufgabe2/inc/: book2.hh  date2.hh  dvd2.hh  lecturer2.hh  library2.hh  medium2.hh  person2.hh  student2.hh
lab5/aufgabe2/src/: book.cc  date.cc  dvd.cc  lecturer.cc  library.cc  main.cc  medium.cc  person.cc  student.cc
lab5/aufgabe3/: CMakeLists.txt
lab5/aufgabe3/inc/: mylist.hh
lab5/aufgabe3/src/: main.cc  mylist.cc
lab5/aufgabe4/: CMakeLists.txt
lab5/aufgabe4/inc/: circle5.hh  circle6.hh  drawingobject2.hh  onedimobject2.hh  point5.hh  polygon5.hh  polygon6.hh  rectangle.hh
lab5/aufgabe4/src/: circle5.cc  circle6.cc  drawingobject2.cc  main.cc  onedimobject2.cc  point6.cc  polygon5.cc  polygon6.cc  rectangle.cc
sfml_demo/: CMakeLists.txt
