cmake_minimum_required(VERSION 2.8)

set(CMAKE_COLOR_MAKEFILE ON)

add_subdirectory(ha1/aufgabe1)
add_subdirectory(ha1/aufgabe2)
add_subdirectory(ha1/aufgabe3)
add_subdirectory(ha1/aufgabe4)
add_subdirectory(ha1/aufgabe5)
add_subdirectory(lab1/aufgabe1)
add_subdirectory(lab1/aufgabe2)
add_subdirectory(lab1/aufgabe3)
add_subdirectory(lab1/aufgabe4)
add_subdirectory(lab1/aufgabe5)
add_subdirectory(ha2/aufgabe1)
add_subdirectory(ha2/aufgabe2)
add_subdirectory(lab2/aufgabe1)
add_subdirectory(lab2/aufgabe2)
add_subdirectory(lab2/aufgabe3)
add_subdirectory(ha3/aufgabe1)
